Fix rendering issue with code on smaller screens.

--- a/_includes/style.css
+++ b/_includes/style.css
@@ -225,4 +225,5 @@ blockquote em {
   header { display: inline; }
   header h1 { flex: 1 100%; }
   header nav { flex: 1 100%; }
+  main { padding: 0.5rem; display: block; }
 }
